--- a/stylesheets/_font.scss
+++ b/stylesheets/_font.scss
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: 'SF-Pro-Display';
-  src: url(../font-family/SF-Pro-Display-Regular.woff) format ("woff");
+  font-family: "SF-Pro-Display";
+  src: url(../font-family/font.woff) format ("woff");
 }
